プレイヤーの死亡パーティクルを作成

--- a/runGame_Particle.vcxproj
+++ b/runGame_Particle.vcxproj
@@ -118,6 +118,8 @@ xcopy C:\KamataEngine\DirectXGame\Resources "$(OutDirFullPath)NoviceResources" /
     <ClCompile Include="FlyingEmitter.cpp" />
     <ClCompile Include="FlyingParticle.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PlayerDeadEmitter.cpp" />
+    <ClCompile Include="PlayerDeadParticle.cpp" />
     <ClCompile Include="RunningEmitter.cpp" />
     <ClCompile Include="RunningParticle.cpp" />
     <ClCompile Include="Util.cpp" />
@@ -152,6 +154,8 @@ xcopy C:\KamataEngine\DirectXGame\Resources "$(OutDirFullPath)NoviceResources" /
     <ClInclude Include="C:\KamataEngine\Adapter\Novice.h" />
     <ClInclude Include="FlyingEmitter.h" />
     <ClInclude Include="FlyingParticle.h" />
+    <ClInclude Include="PlayerDeadEmitter.h" />
+    <ClInclude Include="PlayerDeadParticle.h" />
     <ClInclude Include="RunningEmitter.h" />
     <ClInclude Include="RunningParticle.h" />
     <ClInclude Include="Util.h" />
