プレイヤー復活パーティクルを作成中

--- a/runGame_Particle.vcxproj
+++ b/runGame_Particle.vcxproj
@@ -115,11 +115,15 @@ xcopy C:\KamataEngine\DirectXGame\Resources "$(OutDirFullPath)NoviceResources" /
     <ClCompile Include="C:\KamataEngine\DirectXGame\base\TextureManager.cpp" />
     <ClCompile Include="C:\KamataEngine\DirectXGame\2d\ImGuiManager.cpp" />
     <ClCompile Include="C:\KamataEngine\Adapter\Novice.cpp" />
+    <ClCompile Include="ClearEmitter.cpp" />
+    <ClCompile Include="ClearParticle.cpp" />
     <ClCompile Include="FlyingEmitter.cpp" />
     <ClCompile Include="FlyingParticle.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PlayerDeadEmitter.cpp" />
     <ClCompile Include="PlayerDeadParticle.cpp" />
+    <ClCompile Include="PlayerReviveEmitter.cpp" />
+    <ClCompile Include="PlayerReviveParticle.cpp" />
     <ClCompile Include="RunningEmitter.cpp" />
     <ClCompile Include="RunningParticle.cpp" />
     <ClCompile Include="Util.cpp" />
@@ -152,10 +156,14 @@ xcopy C:\KamataEngine\DirectXGame\Resources "$(OutDirFullPath)NoviceResources" /
     <ClInclude Include="C:\KamataEngine\DirectXGame\input\Input.h" />
     <ClInclude Include="C:\KamataEngine\DirectXGame\scene\GameScene.h" />
     <ClInclude Include="C:\KamataEngine\Adapter\Novice.h" />
+    <ClInclude Include="ClearEmitter.h" />
+    <ClInclude Include="ClearParticle.h" />
     <ClInclude Include="FlyingEmitter.h" />
     <ClInclude Include="FlyingParticle.h" />
     <ClInclude Include="PlayerDeadEmitter.h" />
     <ClInclude Include="PlayerDeadParticle.h" />
+    <ClInclude Include="PlayerReviveEmitter.h" />
+    <ClInclude Include="PlayerReviveParticle.h" />
     <ClInclude Include="RunningEmitter.h" />
     <ClInclude Include="RunningParticle.h" />
     <ClInclude Include="Util.h" />
